# CourseCandC-

./: CMakeLists.txt  README.md
Seccao 1/First/: Primeiro.c
Seccao 10 - Funcoes/: funcoes_c_ponteiros.c
Seccao 11 - Alocacao dinamica de Memoria/: alocacaoDinamicaMatrizes.c  alocacaoDinamicaMatrizes.cpp  alocacaoDinamicaVectores.c  alocacaoDinamicaVectoresCPlusPlus.cpp  function.h
Seccao 12 - Structs/: structCplusplus.cpp
Seccao 13 - Leitura e Escrita em Arquivos Externos/: clearFile.cpp  files.cpp  readFiles.c  readFilesCplusplus.cpp
Seccao 15 - Estruturas de Dados/: binary-search.cpp  search.cpp
Seccao 5 - Condicionais/: Condicionais.c  ex1.c
Seccao 7 - Vectores,Strings,Matrizes/: Vectores.c  exerc_matriz.c  matrizes.c  strings.c
Seccao 8 - Revisao e Introducao c++/: segunda.cpp
Seccao 9 - Ponteiros, funcoes e seus tipos/: ponteiros.cpp
Section 1/First/: Media.c  Primeiro.c  operacaoMatematica.c
Section 10 - Functions/: funcoes_c_ponteiros.c  funcoes_vectores.c
Section 11 - Dynamic Memory Allocation/: alocacaoDinamicaMatrizes.c  alocacaoDinamicaMatrizes.cpp  alocacaoDinamicaVectores.c  alocacaoDinamicaVectoresCPlusPlus.cpp  function.h  one.c
Section 12 - Structs/: struct.c  structCplusplus.cpp  struct_with_struct.c
Section 13 - External Files (Read and Write)/: clearFile.cpp  exampleInC.c  files.cpp  readFiles.c  readFilesCplusplus.cpp
Section 15 - Data Structures/: binary-search.cpp  bubble_sort.cpp  filas_queue.cpp  insertion_sort.cpp  mergesort.cpp  pilhas_stack.cpp  quick1_sort.c  search.cpp  selection_sort.cpp  shell_sort.c
Section 19 - Data Structures Search on Simple Lists/: CMakeLists.txt  menu_inicial_list  menu_inicial_list.cpp  sequencial_list.cpp
Section 20 - Data Structures Search on Linked Lists/: listasequencial_encadeada  listasequencial_encadeada.cpp  meu_list_encadeada  meu_list_encadeada.cpp
Section 21 - GAME Jogo Forca/: jogoforca  jogoforca.cpp  playAlone.cpp  random.cpp  random.h
Section 22 - Game Batalha Naval/: game  game.cpp
Section 23 - Game Jogo da Velha/: gameVelha  gameVelha.cpp
Section 24 - OOP Begin C++/: begin.cpp
Section 25 - OOP Classes and Objects/: pessoa  pessoa.cpp  struct_obj  struct_obj.cpp
Section 26 - Encapsulation/: getSet  getSet.cpp  mobile.h
Section 27 - Inheritence, Polimorphism, Abstraction/: Animal.cpp  Calculadora.cpp  Cao.cpp  Mamifero.cpp  Personagem.cpp  Usuario.cpp  inheritance  inheritance.cpp  overload  overload.cpp
Section 27 - Inheritence, Polimorphism, Abstraction/Ex3/: Pessoa.cpp  Professor.cpp
Section 27 - Inheritence, Polimorphism, Abstraction/Polimorfismo/: Espanhol.cpp  Idioma.cpp  Ingles.cpp  Portugues.cpp
Section 5 - Conditionals/: Condicionais.c  dados.c  ex1.c  rand.c
Section 6 - Loops/: const.c  ex.c  for.c  while.c
Section 7 - Vectors,Strings,Arrays/: Vectores.c  ex.c  exerc_matriz.c  matrizes.c  strings.c
Section 8 - Revision and Introdution to C++/: primeiro.cpp  segunda.cpp
Section 9 - Pointers, funtions and types/: ponteiros.cpp  ponteiros_exe.c
