cmake_minimum_required(VERSION 4.0)
project(Curso_Completo_de_Linguagem_C__C___e_Orientacao_a_Objetos)

set(CMAKE_CXX_STANDARD 14)

include_directories("Section 11 - Dynamic Memory Allocation")

add_executable(Curso_Completo_de_Linguagem_C__C___e_Orientacao_a_Objetos
        "Section 1/First/Media.c"
        "Section 1/First/operacaoMatematica.c"
        "Section 1/First/Primeiro.c"
        "Section 10 - Functions/funcoes_c_ponteiros.c"
        "Section 10 - Functions/funcoes_vectores.c"
        "Section 11 - Dynamic Memory Allocation/alocacaoDinamicaMatrizes.c"
        "Section 11 - Dynamic Memory Allocation/alocacaoDinamicaMatrizes.cpp"
        "Section 11 - Dynamic Memory Allocation/alocacaoDinamicaVectores.c"
        "Section 11 - Dynamic Memory Allocation/alocacaoDinamicaVectoresCPlusPlus.cpp"
        "Section 11 - Dynamic Memory Allocation/function.h"
        "Section 11 - Dynamic Memory Allocation/one.c"
        "Section 12 - Structs/struct.c"
        "Section 12 - Structs/struct_with_struct.c"
        "Section 12 - Structs/structCplusplus.cpp"
        "Section 13 - External Files (Read and Write)/clearFile.cpp"
        "Section 13 - External Files (Read and Write)/exampleInC.c"
        "Section 13 - External Files (Read and Write)/files.cpp"
        "Section 13 - External Files (Read and Write)/readFiles.c"
        "Section 13 - External Files (Read and Write)/readFilesCplusplus.cpp"
        "Section 15 - Data Structures/binary-search.cpp"
        "Section 15 - Data Structures/bubble_sort.cpp"
        "Section 15 - Data Structures/filas_queue.cpp"
        "Section 15 - Data Structures/insertion_sort.cpp"
        "Section 15 - Data Structures/mergesort.cpp"
        "Section 15 - Data Structures/pilhas_stack.cpp"
        "Section 15 - Data Structures/quick1_sort.c"
        "Section 15 - Data Structures/search.cpp"
        "Section 15 - Data Structures/selection_sort.cpp"
        "Section 15 - Data Structures/shell_sort.c"
        "Section 19 - Data Structures Search on Simple Lists/menu_inicial_list.cpp"
        "Section 19 - Data Structures Search on Simple Lists/sequencial_list.cpp"
        "Section 24 - OOP Begin C++/begin.cpp"
        "Section 25 - OOP Classes and Objects/struct_obj.cpp"
        "Section 5 - Conditionals/Condicionais.c"
        "Section 5 - Conditionals/dados.c"
        "Section 5 - Conditionals/ex1.c"
        "Section 5 - Conditionals/rand.c"
        "Section 6 - Loops/const.c"
        "Section 6 - Loops/ex.c"
        "Section 6 - Loops/for.c"
        "Section 6 - Loops/while.c"
        "Section 7 - Vectors,Strings,Arrays/ex.c"
        "Section 7 - Vectors,Strings,Arrays/exerc_matriz.c"
        "Section 7 - Vectors,Strings,Arrays/matrizes.c"
        "Section 7 - Vectors,Strings,Arrays/strings.c"
        "Section 7 - Vectors,Strings,Arrays/Vectores.c"
        "Section 8 - Revision and Introdution to C++/primeiro.cpp"
        "Section 8 - Revision and Introdution to C++/segunda.cpp"
        "Section 9 - Pointers, funtions and types/ponteiros.cpp"
        "Section 9 - Pointers, funtions and types/ponteiros_exe.c")
